--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -10,10 +10,10 @@ one:
   status: MyString
 
 two:
-  user_id: MyString
-  user_email: MyString
-  user_password_digest: MyString
-  user_name: MyString
+  user_id: MyID
+  user_email: MyEmail
+  user_password_digest: MyPassword
+  user_name: MyName
   permission_level: 
   created_at: 2016-04-24 21:26:42
   updated_at: 2016-04-24 21:26:42
