--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -5,7 +5,7 @@ one:
   user_email: MyString
   user_password_digest: MyString
   user_name: MyString
-  perission_level: 
+  permission_level: 
   created_at: 2016-04-24 21:26:42
   updated_at: 2016-04-24 21:26:42
   status: MyString
@@ -15,7 +15,7 @@ two:
   user_email: MyString
   user_password_digest: MyString
   user_name: MyString
-  perission_level: 
+  permission_level: 
   created_at: 2016-04-24 21:26:42
   updated_at: 2016-04-24 21:26:42
   status: MyString
