--- a/test/fixtures/days.yml
+++ b/test/fixtures/days.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  date: MyString
-  number_of_pickups: 
+  date: "2016-05-27"
+  number_of_pickups: 0 
 
 two:
-  date: MyString
-  number_of_pickups: 
+  date: "2016-08-25"
+  number_of_pickups: 1
