--- a/test/fixtures/pickups.yml
+++ b/test/fixtures/pickups.yml
@@ -1,7 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  day_id: 1
+  day_id: nil
   donor_name: MyString
   donor_address_line1: MyString
   donor_address_line2: MyString
